--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,7 +33,7 @@ $body-bg:$color-primario;
   font-size: 12px;
 }
 
-.texto-pregunta {
+#texto-pregunta {
   font-family: 'Montserrat', sans-serif;
   font-style: italic;
   font-size: 14px;
@@ -53,7 +53,7 @@ nav {
   background-color: $color-secundario;
 }
 
-body {
+#body {
   background-color: $color-secundario;
 }
 
